[gd_scene load_steps=5 format=2]

[ext_resource path="res://3DGrid/Grid.gd" type="Script" id=1]
[ext_resource path="res://3DGrid/GridLines.tscn" type="PackedScene" id=2]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.760784, 0.760784, 0.760784, 1 )

[sub_resource type="CubeMesh" id=2]

[node name="Grid" type="Spatial"]
script = ExtResource( 1 )

[node name="YLines" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, -0.1, 0 )

[node name="YLinesUp" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0.1, 0 )

[node name="XLines" parent="." instance=ExtResource( 2 )]
transform = Transform( -1.62921e-07, 1, -1.62921e-07, 0, -1.62921e-07, -1, -1, -1.62921e-07, 2.65431e-14, 0, -0.1, 0 )

[node name="XLinesUp" parent="." instance=ExtResource( 2 )]
transform = Transform( -1.62921e-07, 1, -1.62921e-07, 0, -1.62921e-07, -1, -1, -1.62921e-07, 2.65431e-14, 0, 0.1, 0 )

[node name="ZLines" parent="." instance=ExtResource( 2 )]
transform = Transform( -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, 0, 1, 0, 0, 0 )

[node name="ZLinesH" parent="." instance=ExtResource( 2 )]
transform = Transform( -1, 3.25841e-07, 0, -3.25841e-07, -1, 0, 0, 0, 1, 0, 0, 0 )

[node name="Cube" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0, 0 )
material_override = SubResource( 1 )
mesh = SubResource( 2 )
material/0 = null
